--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,29 @@
 .link-item {
   color: #ece6dd;
 }
+
+.gallery-container {
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 1.25rem;
+  grid-auto-flow: dense;
+}
+
+.gallery-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.horizontal {
+  grid-column: auto / span 2;
+}
+
+.vartical {
+  grid-row: auto / span 2;
+  grid-column: auto / span 2;
+}
+
+.squre {
+  grid-column: auto / span 2;
+  grid-row: auto / span 2;
+}
